--- a/src/web/index.html
+++ b/src/web/index.html
@@ -117,7 +117,7 @@
         <section class="cta-section">
             <h2>Ready to Start Your Adventure?</h2>
             <p>Join thousands of players in the ultimate anime RPG experience!</p>
-            <a href="https://discord.com/api/oauth2/authorize?client_id=${process.env.DISCORD_CLIENT_ID}&permissions=8&scope=bot%20applications.commands"
+            <a href="https://discord.com/api/oauth2/authorize?client_id=1412149569059422341&permissions=8&scope=bot%20applications.commands"
                class="cta-button" target="_blank">
                 Add to Discord
             </a>
