chore(docs): README cleanup - remove HTML details, add code-fence languages, wrap long lines

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -114,18 +114,22 @@
         </section>
 
         <!-- CTA Section -->
-        <section class="cta-section">
-            <h2>Ready to Start Your Adventure?</h2>
-            <p>Join thousands of players in the ultimate anime RPG experience!</p>
-            <a href="https://discord.com/api/oauth2/authorize?client_id=1412149569059422341&permissions=8&scope=bot%20applications.commands"
-               class="cta-button" target="_blank">
-                Add to Discord
-            </a>
-            <a href="/auth/discord" class="cta-button login-button">
-                Login with Discord
-            </a>
-        </section>
+        <section class="cta-section" id="cta-section">
+    <h2 id="cta-heading">Ready to Start Your Adventure?</h2>
+    <p id="cta-subheading">Join thousands of players in the ultimate anime RPG experience!</p>
+    <div id="cta-buttons">
+        <a href="https://discord.com/api/oauth2/authorize?client_id=1412149569059422341&permissions=8&scope=bot%20applications.commands"
+           class="cta-button" target="_blank">
+            Add to Discord
+        </a>
+        <a href="/auth/discord" class="cta-button login-button" id="cta-login-button">
+            Login with Discord
+        </a>
+        <a href="/commands.html" class="cta-button" id="cta-dashboard-button" style="display: none;">
+            Explore Commands
+        </a>
     </div>
+</section>
 
     <footer>
         <div class="footer-content">
