--- a/src/web/index.html
+++ b/src/web/index.html
@@ -122,7 +122,7 @@
            class="cta-button" target="_blank">
             Add to Discord
         </a>
-        <a href="/auth/discord" class="cta-button login-button" id="cta-login-button">
+        <a href="/auth/discord" class="cta-button login-button" id="cta-login-button" data-auth="discord">
             Login with Discord
         </a>
         <a href="/commands.html" class="cta-button" id="cta-dashboard-button" style="display: none;">
